added cart module

--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -142,6 +142,7 @@
      be invisible. Use JavaScript to change the
      opacity and make it visible. */
   opacity: 0;
+  transition: opacity 50ms;
 }
 
 .added-to-cart img {
@@ -153,4 +154,8 @@
   width: 100%;
   padding: 8px;
   border-radius: 50px;
+}
+
+.added-message-opacity{
+  opacity: 1;
 }
